tests/conformance/typecheck/valid/try_catch.ks
// try/catch expression typing
val x = try { 1 } catch (e) { e => 2 }
