tests/conformance/typecheck/invalid/while_non_bool_condition.ks
// EXPECT: Bool
// Non-boolean while condition
val x = while (1) { () }
